# arvyo-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: dashboard.py
arvyo/: _toolchain.py  batch_worker.py  contract.py  pipeline_config.py  result_schema.py  run.py  worker.py
arvyo/data/: dataset.py
arvyo/inference/: posteriors.py
arvyo/models/: encoder.py  heads.py
arvyo/search/: tls_search.py
arvyo/synthesis/: forward_models.py
arvyo/vetting/: vet.py
arvyo/views/: views.py
arvyo/viz/: plots.py
benchmarks/: README.md
configs/: default.yaml
docs/: finale_setup.md  finale_setup_cell.py
scripts/: export_wiz_samples.py  generate_fixtures.py  regenerate_fixtures.py  smoke_run.py
tests/: test_contract.py  test_end_to_end.py  test_fixture_recovery.py  test_forward_models.py  test_smoke.py  test_smoke_e2e.py  test_views.py  test_worker.py
tests/fixtures/: fixture_eb.npz  fixture_null.npz  fixture_planet.npz  fixture_starspot.npz  fixture_unknown.npz
